--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.2.1",
+    "axios": "^1.7.8",
+    "pinia": "^2.2.6",
     "primevue": "^4.2.1",
     "storybook": "^8.4.2",
     "tailwindcss-primeui": "^0.3.4",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
+    "@pinia/testing": "^0.1.7",
     "@primevue/auto-import-resolver": "^4.2.2",
     "@storybook/addon-essentials": "^8.4.2",
     "@storybook/addon-interactions": "^8.4.2",
