--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "primevue": "^4.2.1",
     "storybook": "^8.4.2",
     "tailwindcss-primeui": "^0.3.4",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
